@@ -11,6 +11,7 @@ Bug fixes:
 - PR#5024: camlp4r now handles underscores in irrefutable patern matching of records
 - PR#5211: updated Genlex documentation to state that camlp4 is mandatory for 'parser'
            keyword and associated notation
+- PR#5236: new '%revapply' primitive with the semantics 'revapply x f = f x'
 - PR#5238, PR#5277: Sys_error when getting error location
 - PR#5301: camlp4r and exception equal to another one with parameters
 - PR#5316: objinfo now shows ccopts/ccobjs/force_link when applicable
